<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shawasssisignment1.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:paddingBottom="10dp"
            android:text="@string/heading" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textCapWords"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/header" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textWebEmailAddress"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/nameEdit" />

        <EditText
            android:id="@+id/occEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_occupation"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/emailEdit" />

        <EditText
            android:id="@+id/descBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tell_us_about_yourself"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/occEdit" />

        <Button
            android:id="@+id/birthdayEdit"
            android:background="@drawable/button_selector"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:hint="@string/birthday"
            android:inputType="none"
            android:onClick="onDateClicked"
            android:layout_marginStart="25dp"
            android:layout_below="@+id/descBox" />

        <Button
            android:id="@+id/savedImage"
            android:background="@drawable/button_selector"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:hint="@string/get_image_from_camera_roll"
            android:onClick="imagePick"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/descBox"
            android:layout_toEndOf="@+id/birthdayEdit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/birthdayEdit"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/selectedImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_picture"
                android:paddingTop="15dp"
                android:layout_margin="20dp"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/submitBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="onSubmit"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="200dp"
                android:gravity="center"
                android:text="@string/submit" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>