...
    <string name="heading">Shaw, Clinton 5.6.2018</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Enter name…</string>
    <string name="enter_occupation">Enter occupation…</string>
    <string name="enter_email">Enter email…</string>
    <string name="birthday">Enter your birthday…</string>
    <string name="ok">OK</string>
    <string name="go_back">Go Back</string>
    <string name="take_a_picture_with_your_camera">Take a picture with your camera</string>
    <string name="get_image_from_camera_roll">Get image from camera roll…</string>
    <string name="profile_picture">profile picture</string>
    <string name="tell_us_about_yourself">Tell us about yourself…</string>
    <string name="profile_pic2">Profile picture</string>
...
